--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Navbar -->
     <div class="navbar">
-      <div class="container">
+      <div class="container flex">
         <h1 class="logo">Loruki</h1>
         <nav>
           <ul>
@@ -28,5 +28,28 @@
         </nav>
       </div>
     </div>
+
+    <!-- Showcase -->
+    <section class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <h1>Easier Deployment</h1>
+          <p>
+            deploy web apps of all kinds, from large scale enterprise APIs to
+            static websites for individuals. Fill out the form to try a demo of
+            our platform
+          </p>
+          <a href="features.html" class="btn btn-outline">Read More</a>
+        </div>
+        <div class="showcase-form card">
+          <h2>Request a demo</h2>
+          <form>
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Name" />
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
