--- a/index.html
+++ b/index.html
@@ -45,8 +45,20 @@
           <h2>Request a demo</h2>
           <form>
             <div class="form-control">
-              <input type="text" name="name" placeholder="Name" />
+              <input type="text" name="name" placeholder="Name" required />
             </div>
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Company Name"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="Submit" value="Send" class="btn btn-primary" />
           </form>
         </div>
       </div>
